--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <!-- ======= Header Section ======= -->
 
-    <header id="header" class="section ">
+    <header id="header" class="section">
         <!-- <nav class="navbar navbar-expand-lg  " > -->
         <nav class="navbar navbar-expand-lg  ">
 
@@ -43,7 +43,7 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link" href="#header">HOME</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="#apropos">ABOUT</a>
+                        <li class="nav-item"><a class="nav-link" href="#about">ABOUT</a>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="#skills">SKILLS</a>
                         </li>
@@ -106,12 +106,12 @@
 
 
     </header>
+
     <!-- ======= Main ======= -->
     <main class="content ">
-
         <!-- ======= Social Section ======= -->
-        <section class="section container">
-            <div class="section social container wrapper" id="social">
+        <section class="container">
+            <div class="social container wrapper" id="social">
                 <div class="icon facebook">
                     <div class="tooltip">Facebook</div>
                     <span><i class="fab fa-facebook-f"></i></span>
@@ -137,7 +137,7 @@
         <!-- End Social Section -->
 
         <!-- ======= About Section ======= -->
-        <section class="section mt-4 mb-4" data-aos="fade-up" id="apropos">
+        <section class="section mt-4 mb-4" data-aos="fade-up" id="about">
             <div class="container ">
                 <div class="row flex-row   card " data-aos="fade-up" data-aos-offset="8">
                     <div class="mt-5 col-lg-6 col-md-12 col-sm-12">
@@ -549,69 +549,50 @@
                         <h3>Saul Goodman</h3>
                         <h4>Ceo &amp; Founder</h4>
                         <p>
-
                             Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-
                         </p>
-
                     </div>
-
                     <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
                         <p>
-
                             Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-
                         </p>
                         <img src="public/images/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
                         <h3>Sara Wilsson</h3>
                         <h4>Designer</h4>
                     </div>
-
                     <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
                         <img src="public/images/testimonials/testimonials-3.webp" class="testimonial-img" alt="">
                         <h3>Jena Karlis</h3>
                         <h4>Store Owner</h4>
                         <p>
-
                             Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-
                         </p>
                     </div>
-
                     <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
                         <p>
-
                             Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-
                         </p>
                         <img src="public/images/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
                         <h3>Matt Brandon</h3>
                         <h4>Freelancer</h4>
                     </div>
-
                     <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
                         <img src="public/images/testimonials/testimonials-5.webp" class="testimonial-img" alt="">
                         <h3>John Larson</h3>
                         <h4>Entrepreneur</h4>
                         <p>
-
                             Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-
                         </p>
                     </div>
                     <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
                         <p>
-
                             Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-
                         </p>
                         <img src="public/images/testimonials/testimonials-6.jpg" class="testimonial-img" alt="">
                         <h3>John Larson</h3>
                         <h4>Entrepreneur</h4>
                     </div>
-
                 </div>
-
             </div>
         </section>
         <!-- End Testimonials Section -->
