--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
                 </button>
                 <div class="navbar-collapse collapse" id="navigation">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a class="nav-link" href="#header">HOME</a>
+                        <li class="nav-item"><a class="nav-link link1" href="#header">HOME</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="#about">ABOUT</a>
+                        <li class="nav-item"><a class="nav-link link2" href="#about">ABOUT</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="#skills">SKILLS</a>
+                        <li class="nav-item"><a class="nav-link link3" href="#skills">SKILLS</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">PORTFOLIO</a>
+                        <li class="nav-item"><a class="nav-link link4" href="#portfolio">PORTFOLIO</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="#experiences">EXPERIENCES</a>
+                        <li class="nav-item"><a class="nav-link link5" href="#experiences">EXPERIENCES</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="#testimonials">TESTIMONIALS</a>
+                        <li class="nav-item"><a class="nav-link link6" href="#testimonials">TESTIMONIALS</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">CONTACT</a>
+                        <li class="nav-item"><a class="nav-link link7" href="#contact">CONTACT</a>
                         </li>
                     </ul>
                 </div>
@@ -459,13 +459,12 @@
         <!-- End Portfolio Section -->
 
         <!-- ======= experiences Section ======= -->
-        <!-- <section class=" section" id="experiences">
+        <section class=" section" id="experiences">
             <div class="container">
                 <div class="h4 text-center mb-4 title mt-4 ">Work Experience</div>
                 <div class="card">
                     <div class="row">
-                        <div class=" cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50"
-                            data-aos-duration="500">
+                        <div class=" cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body align-middle text-light">
                                 <p>March 2016 - Present</p>
                                 <div class="h5">CreativeM</div>
@@ -474,21 +473,15 @@
                         <div class=" col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body">
                                 <div class="h5">Front End Developer</div>
-                                <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna
-                                    quam
-                                    iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos
-                                    tellus, hendrerit vel eleifend primis lectus quisque cubilia
-                                    sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae,
-                                    curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium
-                                    molestie ultricies sollicitudin dui.</p>
+                                <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia
+                                    sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="row">
-                        <div class=" cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50"
-                            data-aos-duration="500">
+                        <div class=" cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body text-light">
                                 <p>April 2014 - March 2016</p>
                                 <div class="h5">WebNote</div>
@@ -497,21 +490,15 @@
                         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body">
                                 <div class="h5">Web Developer</div>
-                                <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna
-                                    quam
-                                    iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos
-                                    tellus, hendrerit vel eleifend primis lectus quisque cubilia
-                                    sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae,
-                                    curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium
-                                    molestie ultricies sollicitudin dui.</p>
+                                <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia
+                                    sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="row">
-                        <div class="cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50"
-                            data-aos-duration="500">
+                        <div class="cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body text-light">
                                 <p>April 2013 - February 2014</p>
                                 <div class="h5">WEBM</div>
@@ -520,19 +507,14 @@
                         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body">
                                 <div class="h5">Intern</div>
-                                <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna
-                                    quam
-                                    iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos
-                                    tellus, hendrerit vel eleifend primis lectus quisque cubilia
-                                    sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae,
-                                    curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium
-                                    molestie ultricies sollicitudin dui.</p>
+                                <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia
+                                    sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
         <!-- End experiences Section -->
 
         <!-- ======= Testimonials Section ======= -->
@@ -711,7 +693,7 @@
     <script src="public/vendors/bootstrap/bootstrap.min.js"></script>
     <script src="public/vendors/jquery/jquery.easing.min.js"></script>
     <!-- à supprimer en cas de non inutilité -->
-    <!-- <script src="public/vendors/jquery/jquery.waypoints.min.js"></script> -->
+    <script src="public/vendors/waypoints/jquery.waypoints.min.js"></script>
     <script src="public/vendors/aos/aos-2.3.1.js"></script>
     <script src="public/vendors/owl.carousel/owl.carousel.min.js"></script>
     <script src="public/vendors/lightbox/lightbox.min.js"></script>
