--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <nav class="navbar navbar-expand-lg  ">
 
             <div class="container">
-                <a href="#header" class="logo navbar-brand"></a>
+                <a href="/" class="logo navbar-brand"></a>
                 <button class="navbar-toggler float-right custom-toggler collapsed " type="button" data-toggle="collapse" data-target="#navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
