--- a/index.html
+++ b/index.html
@@ -464,13 +464,13 @@
                 <div class="h4 text-center mb-4 title mt-4 ">Work Experience</div>
                 <div class="card">
                     <div class="row">
-                        <div class=" cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                        <div class=" cardbg col-lg-3 col-md-3 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body align-middle text-light">
                                 <p>March 2016 - Present</p>
                                 <div class="h5">CreativeM</div>
                             </div>
                         </div>
-                        <div class=" col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                        <div class="col-lg-9 col-md-9 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body">
                                 <div class="h5">Front End Developer</div>
                                 <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia
@@ -481,13 +481,13 @@
                 </div>
                 <div class="card">
                     <div class="row">
-                        <div class=" cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                        <div class=" cardbg col-lg-3 col-md-3 col-sm-12 " data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body text-light">
                                 <p>April 2014 - March 2016</p>
                                 <div class="h5">WebNote</div>
                             </div>
                         </div>
-                        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                        <div class="col-lg-9 col-md-9 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body">
                                 <div class="h5">Web Developer</div>
                                 <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia
@@ -498,13 +498,13 @@
                 </div>
                 <div class="card">
                     <div class="row">
-                        <div class="cardbg col-md-3 " data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                        <div class="cardbg col-lg-3 col-md-3 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body text-light">
                                 <p>April 2013 - February 2014</p>
                                 <div class="h5">WEBM</div>
                             </div>
                         </div>
-                        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                        <div class="col-lg-9 col-md-9 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body">
                                 <div class="h5">Intern</div>
                                 <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia
