--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
                 </button>
                 <div class="navbar-collapse collapse" id="navigation">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a class="nav-link link1" href="#header">HOME</a>
+                        <li class=" nav-item nav-item1"><a class="nav-link link1" href="#header">HOME</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link link2" href="#about">ABOUT</a>
+                        <li class=" nav-item nav-item2"><a class="nav-link link2" href="#about">ABOUT</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link link3" href="#skills">SKILLS</a>
+                        <li class=" nav-item nav-item3"><a class="nav-link link3" href="#skills">SKILLS</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link link4" href="#portfolio">PORTFOLIO</a>
+                        <li class=" nav-item nav-item4"><a class="nav-link link4" href="#portfolio">PORTFOLIO</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link link5" href="#experiences">EXPERIENCES</a>
+                        <li class=" nav-item nav-item5"><a class="nav-link link5" href="#experiences">EXPERIENCES</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link link6" href="#testimonials">TESTIMONIALS</a>
+                        <li class=" nav-item nav-item6"><a class="nav-link link6" href="#testimonials">TESTIMONIALS</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link link7" href="#contact">CONTACT</a>
+                        <li class=" nav-item nav-item7"><a class="nav-link link7" href="#contact">CONTACT</a>
                         </li>
                     </ul>
                 </div>
