--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                                 <span class="percent">98%</span>
                             </div>
                             <div class="bar-container">
-                                <span class="progressbar " id="progress-html"></span>
+                                <span id="progress-html"></span>
                             </div>
                         </li>
                         <li class=" col-12">
@@ -207,7 +207,7 @@
                                 <span class="percent">95%</span>
                             </div>
                             <div class="bar-container">
-                                <span class="progressbar " id="progress-css"></span>
+                                <span id="progress-css"></span>
                             </div>
                         </li>
                         <li class=" col-12">
@@ -216,7 +216,7 @@
                                 <span class="percent">75%</span>
                             </div>
                             <div class="bar-container">
-                                <span class="progressbar " id="progress-javascript"></span>
+                                <span id="progress-javascript"></span>
                             </div>
                         </li>
                         <li class=" col-12">
@@ -225,7 +225,7 @@
                                 <span class="percent">80%</span>
                             </div>
                             <div class="bar-container">
-                                <span class="progressbar " id="progress-bootstrap"></span>
+                                <span id="progress-bootstrap"></span>
                             </div>
                         </li>
                         <li class=" col-12">
@@ -234,7 +234,7 @@
                                 <span class="percent">65%</span>
                             </div>
                             <div class="bar-container">
-                                <span class="progressbar " id="progress-photoshop"></span>
+                                <span id="progress-photoshop"></span>
                             </div>
                         </li>
                     </ul>
@@ -245,7 +245,7 @@
                                 <span class="percent">65%</span>
                             </div>
                             <div class="bar-container">
-                                <span class="progressbar " id="progress-react"></span>
+                                <span id="progress-react"></span>
                             </div>
                         </li>
                         <li class=" col-12">
@@ -254,7 +254,7 @@
                                 <span class="percent">70%</span>
                             </div>
                             <div class="bar-container">
-                                <span class="progressbar " id="progress-php"></span>
+                                <span id="progress-php"></span>
                             </div>
                         </li>
                         <li class=" col-12">
