--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                                 <span class="percent">70%</span>
                             </div>
                             <div class="bar-container">
-                                <span class="progressbar " id="progress-wordpress"></span>
+                                <span id="progress-wordpress"></span>
                             </div>
                         </li>
                         <li class=" col-12">
@@ -272,7 +272,7 @@
                                 <span class="percent">50%</span>
                             </div>
                             <div class="bar-container">
-                                <span class="progressbar " id="progress-asp"></span>
+                                <span id="progress-asp"></span>
                             </div>
                         </li>
                         <li class=" col-12">
@@ -281,7 +281,7 @@
                                 <span class="percent">65%</span>
                             </div>
                             <div class="bar-container">
-                                <span class="progressbar " id="progress-sql"></span>
+                                <span id="progress-sql"></span>
                             </div>
                         </li>
                     </ul>
