--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         <!-- End Skills Section -->
 
         <!-- ======= Portfolio Section ======= -->
-        <section class="section  portfolio" id="portfolio">
+        <section class="section  portfolio lightbox" id="portfolio">
             <div class="h4 text-center mb-4 title mt-4">Portfolio</div>
             <div class="container card">
                 <div class="mt-4 row" data-aos="fade-in">
