--- a/index.html
+++ b/index.html
@@ -697,6 +697,7 @@
     <script src="public/vendors/aos/aos-2.3.1.js"></script>
     <script src="public/vendors/owl.carousel/owl.carousel.min.js"></script>
     <script src="public/vendors/lightbox/lightbox.min.js"></script>
+    <script src="public/vendors/parallax.min.js"></script>
 
     <script src="public/js/main.js"></script>
 
