--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="public/vendors/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="public/vendors/aos/aos.css" rel="stylesheet">
     <link href="public/vendors/lightbox/lightbox.min.css" rel="stylesheet" />
+
     <!-- font-awesome -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -59,8 +60,8 @@
             </div>
         </nav>
 
-        <div class=" wrapper parallax-wrapper">
-            <div class="container content-profile parallax">
+        <div class="  parallax-wrapper">
+            <div class=" content-profile parallax">
                 <div class=" content-profile-center">
                     <div class="profile-img" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="1000">
                         <a href="#"><img src="public/images/avatar.png" alt="Image" /></a>
@@ -306,7 +307,7 @@
                 </div>
                 <div class="row  ">
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 app">
-                        <a class="portfolio-box venobox" href="public/images/portfolio/fullsize/1.webp" title="Project Name">
+                        <a class="portfolio-box" href="public/images/portfolio/fullsize/1.webp" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/1.webp" alt="..." />
                             <div class="align-content-center ">
                                 <div class="cap1">
@@ -696,7 +697,6 @@
     <script src="public/vendors/aos/aos-2.3.1.js"></script>
     <script src="public/vendors/owl.carousel/owl.carousel.min.js"></script>
     <script src="public/vendors/lightbox/lightbox.min.js"></script>
-    <script src="public/vendors/parallax.min.js"></script>
 
     <script src="public/js/main.js"></script>
 
