--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- font-awesome -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- <link href="assets/vendor/venobox/venobox.css" rel="stylesheet"> -->
 
     <!-- Main CSS File -->
     <link href="public/css/main.css" rel="stylesheet">
@@ -308,147 +309,105 @@
                 <div class="row  ">
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 app">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/1.webp" title="Project Name">
-                            <img class="img-fluid" src="public/images/portfolio/thumbnails/1.webp" alt="..." />
-                            <div class="align-content-center ">
-                                <div class="cap1">
-                                    <h3 class="mb-4">Project Name</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
-                                </div>
-                                <div class="cap2">
-                                    <a href="#">
-                                        <p class="text-center align-middle">Visit</p>
-                                    </a>
-                                </div>
-                            </div>
-                        </a>
+                            <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/1.webp" alt="..." /> </a>
+
+
+                        <div class="cap row justify-content-between">
+                            <p class="ml-3 text-light ">projet-name</p>
+                            <a href="#">
+                                <p class="mr-3 ">Visit</p>
+                            </a>
+                        </div>
+
+
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 design">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/2.webp" title="Project Name">
-                            <img class="img-fluid" src="public/images/portfolio/thumbnails/2.webp" alt="..." />
-                            <div class="each-item">
-                                <div class="cap1">
-                                    <h3 class="mb-4">Project Name</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
-                                </div>
-                                <div class="cap2">
-                                    <a href="#">
-                                        <p class="text-center">Visit</p>
-                                    </a>
-                                </div>
-                            </div>
-                        </a>
+                            <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/2.webp" alt="..." /> </a>
+                        <div class="cap row justify-content-between">
+                            <p class="ml-3 text-light">projet-name</p>
+                            <a href="#">
+                                <p class="mr-3">Visit</p>
+                            </a>
+                        </div>
+
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 web">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/3.webp" title="Project Name">
-                            <img class="img-fluid" src="public/images/portfolio/thumbnails/3.webp" alt="..." />
-                            <div class="each-item">
-                                <div class="cap1">
-                                    <h3 class="mb-4">Project Name</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
-                                </div>
-                                <div class="cap2">
-                                    <a href="#">
-                                        <p class="text-center">Visit</p>
-                                    </a>
-                                </div>
-                            </div>
-                        </a>
+                            <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/3.webp" alt="..." /> </a>
+                        <div class="cap row justify-content-between">
+                            <p class="ml-3 text-light">projet-name</p>
+                            <a href="#">
+                                <p class="mr-3">Visit</p>
+                            </a>
+                        </div>
+
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 app">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/4.webp" title="Project Name">
-                            <img class="img-fluid" src="public/images/portfolio/thumbnails/4.webp" alt="..." />
-                            <div class="each-item">
-                                <div class="cap1">
-                                    <h3 class="mb-4">Project Name</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
-                                </div>
-                                <div class="cap2">
-                                    <a href="#">
-                                        <p class="text-center">Visit</p>
-                                    </a>
-                                </div>
-                            </div>
-                        </a>
+                            <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/4.webp" alt="..." /> </a>
+                        <div class="cap row justify-content-between">
+                            <p class="ml-3 text-light">projet-name</p>
+                            <a href="#">
+                                <p class="mr-3">Visit</p>
+                            </a>
+                        </div>
+
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 design">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/5.webp" title="Project Name">
-                            <img class="img-fluid" src="public/images/portfolio/thumbnails/5.webp" alt="..." />
-                            <div class="each-item">
-                                <div class="cap1">
-                                    <h3 class="mb-4">Project Name</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
-                                </div>
-                                <div class="cap2">
-                                    <a href="#">
-                                        <p class="text-center">Visit</p>
-                                    </a>
-                                </div>
-                            </div>
-                        </a>
+                            <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/5.webp" alt="..." /> </a>
+                        <div class="cap row justify-content-between">
+                            <p class="ml-3 text-light">projet-name</p>
+                            <a href="#">
+                                <p class="mr-3">Visit</p>
+                            </a>
+                        </div>
+
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 web">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/6.webp" title="Project Name">
-                            <img class="img-fluid" src="public/images/portfolio/thumbnails/6.webp" alt="..." />
-                            <div class="each-item">
-                                <div class="cap1">
-                                    <h3 class="mb-4">Project Name</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
-                                </div>
-                                <div class="cap2">
-                                    <a href="#">
-                                        <p class="text-center">Visit</p>
-                                    </a>
-                                </div>
-                            </div>
-                        </a>
+                            <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/6.webp" alt="..." /> </a>
+                        <div class="cap row justify-content-between">
+                            <p class="ml-3 text-light">projet-name</p>
+                            <a href="#">
+                                <p class="mr-3">Visit</p>
+                            </a>
+                        </div>
+
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 app">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/7.webp" title="Project Name">
-                            <img class="img-fluid" src="public/images/portfolio/thumbnails/7.webp" alt="..." />
-                            <div class="each-item">
-                                <div class="cap1">
-                                    <h3 class="mb-4">Project Name</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
-                                </div>
-                                <div class="cap2">
-                                    <a href="#">
-                                        <p class="text-center">Visit</p>
-                                    </a>
-                                </div>
-                            </div>
-                        </a>
+                            <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/7.webp" alt="..." /> </a>
+                        <div class="cap row justify-content-between">
+                            <p class="ml-3 text-light">projet-name</p>
+                            <a href="#">
+                                <p class="mr-3">Visit</p>
+                            </a>
+                        </div>
+
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 design">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/8.webp" title="Project Name">
-                            <img class="img-fluid" src="public/images/portfolio/thumbnails/8.webp" alt="..." />
-                            <div class="each-item">
-                                <div class="cap1">
-                                    <h3 class="mb-4">Project Name</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
-                                </div>
-                                <div class="cap2">
-                                    <a href="#">
-                                        <p class="text-center">Visit</p>
-                                    </a>
-                                </div>
-                            </div>
-                        </a>
+                            <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/8.webp" alt="..." /> </a>
+                        <div class="cap row justify-content-between">
+                            <p class="ml-3 text-light">projet-name</p>
+                            <a href="#">
+                                <p class="mr-3">Visit</p>
+                            </a>
+                        </div>
+
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 web">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/9.webp" title="Project Name">
-                            <img class="img-fluid" src="public/images/portfolio/thumbnails/9.webp" alt="..." />
-                            <div class="each-item">
-                                <div class="cap1">
-                                    <h3 class="mb-4">Project Name</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
-                                </div>
-                                <div class="cap2">
-                                    <a href="#">
-                                        <p class="text-center">Visit</p>
-                                    </a>
-                                </div>
-                            </div>
-                        </a>
+                            <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/9.webp" alt="..." /> </a>
+                        <div class="cap row justify-content-between">
+                            <p class="ml-3 text-light">projet-name</p>
+                            <a href="#">
+                                <p class="mr-3">Visit</p>
+                            </a>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -697,6 +656,7 @@
     <script src="public/vendors/aos/aos-2.3.1.js"></script>
     <script src="public/vendors/owl.carousel/owl.carousel.min.js"></script>
     <script src="public/vendors/lightbox/lightbox.min.js"></script>
+    <!-- <script src="public/vendors/venobox/venobox.min.js"></script> -->
 
     <script src="public/js/main.js"></script>
 
