--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="public/vendors/lightbox/lightbox.min.css" rel="stylesheet" />
 
     <!-- font-awesome -->
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css'>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- <link href="assets/vendor/venobox/venobox.css" rel="stylesheet"> -->
 
@@ -154,28 +154,28 @@
                         </div>
                         <div class="card-body col-12 ">
                             <div class="h4 mt-0 title">Basic Information</div>
-                            <div class="row">
-                                <div class="col-sm-4"><span class="text-uppercase">Name:</span></div>
+                            <div class="row p">
+                                <div class="col-sm-4"><strong class="text-uppercase">Name:</strong></div>
                                 <div class="col-sm-8">Oumaima El Obayid</div>
                             </div>
-                            <div class="row mt-2">
-                                <div class="col-sm-4"><span class="text-uppercase">Age:</span></div>
+                            <div class="row p mt-2">
+                                <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
                                 <div class="col-sm-8">25</div>
                             </div>
-                            <div class="row mt-2">
-                                <div class="col-sm-4"><span class="text-uppercase">Email:</span></div>
+                            <div class="row p mt-2">
+                                <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
                                 <div class="col-sm-8">Obayid@company.com</div>
                             </div>
-                            <div class="row mt-2">
-                                <div class="col-sm-4"><span class="text-uppercase">Phone:</span></div>
+                            <div class="row p mt-2">
+                                <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
                                 <div class="col-sm-8">+​212 537 71 90 00</div>
                             </div>
-                            <div class="row mt-2">
-                                <div class="col-sm-4"><span class="text-uppercase">Address:</span></div>
+                            <div class="row p mt-2">
+                                <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
                                 <div class="col-sm-8">25, Daoudia, Marrakech, Maroc</div>
                             </div>
-                            <div class="row mt-2">
-                                <div class="col-sm-4"><span class="text-uppercase">Language:</span></div>
+                            <div class="row p mt-2">
+                                <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
                                 <div class="col-sm-8">English, French, Arabe</div>
                             </div>
                         </div>
@@ -315,7 +315,9 @@
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light ">projet-name</p>
                             <a href="#">
-                                <p class="mr-3 ">Visit</p>
+                                <p class="mr-3 "><i class="fas fa-link"></i>
+                                    </i>
+                                </p>
                             </a>
                         </div>
 
@@ -327,7 +329,7 @@
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light">projet-name</p>
                             <a href="#">
-                                <p class="mr-3">Visit</p>
+                                <p class="mr-3"><i class="fas fa-link"></i></p>
                             </a>
                         </div>
 
@@ -338,7 +340,7 @@
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light">projet-name</p>
                             <a href="#">
-                                <p class="mr-3">Visit</p>
+                                <p class="mr-3"><i class="fas fa-link"></i></p>
                             </a>
                         </div>
 
@@ -349,7 +351,7 @@
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light">projet-name</p>
                             <a href="#">
-                                <p class="mr-3">Visit</p>
+                                <p class="mr-3"><i class="fas fa-link"></i></p>
                             </a>
                         </div>
 
@@ -360,7 +362,7 @@
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light">projet-name</p>
                             <a href="#">
-                                <p class="mr-3">Visit</p>
+                                <p class="mr-3"><i class="fas fa-link"></i></p>
                             </a>
                         </div>
 
@@ -371,7 +373,7 @@
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light">projet-name</p>
                             <a href="#">
-                                <p class="mr-3">Visit</p>
+                                <p class="mr-3"><i class="fas fa-link"></i></p>
                             </a>
                         </div>
 
@@ -382,7 +384,7 @@
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light">projet-name</p>
                             <a href="#">
-                                <p class="mr-3">Visit</p>
+                                <p class="mr-3"><i class="fas fa-link"></i></p>
                             </a>
                         </div>
 
@@ -393,7 +395,7 @@
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light">projet-name</p>
                             <a href="#">
-                                <p class="mr-3">Visit</p>
+                                <p class="mr-3"><i class="fas fa-link"></i></p>
                             </a>
                         </div>
 
@@ -404,7 +406,7 @@
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light">projet-name</p>
                             <a href="#">
-                                <p class="mr-3">Visit</p>
+                                <p class="mr-3"><i class="fas fa-link"></i></p>
                             </a>
                         </div>
 
@@ -425,7 +427,7 @@
                     <div class="row">
                         <div class=" cardbg col-lg-3 col-md-3 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body align-middle text-light">
-                                <p>March 2016 - Present</p>
+                                <p class="text-light"> March 2016 - Present</p>
                                 <div class="h5">CreativeM</div>
                             </div>
                         </div>
@@ -442,7 +444,7 @@
                     <div class="row">
                         <div class=" cardbg col-lg-3 col-md-3 col-sm-12 " data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body text-light">
-                                <p>April 2014 - March 2016</p>
+                                <p class="text-light">April 2014 - March 2016</p>
                                 <div class="h5">WebNote</div>
                             </div>
                         </div>
@@ -459,7 +461,7 @@
                     <div class="row">
                         <div class="cardbg col-lg-3 col-md-3 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body text-light">
-                                <p>April 2013 - February 2014</p>
+                                <p class="text-light">April 2013 - February 2014</p>
                                 <div class="h5">WEBM</div>
                             </div>
                         </div>
@@ -551,8 +553,8 @@
                                         <div class="col-md-6">
                                             <div class="card-body">
                                                 <form action="https://formspree.io/your@email.com" method="POST">
-                                                    <div class="p pb-3"><strong>Feel free to contact me </strong>
-                                                    </div>
+                                                    <p class="h5 pb-3"><strong>Feel free to contact me </strong>
+                                                    </p>
                                                     <div class="row mb-3">
                                                         <div class="col">
                                                             <div class="input-group"><span class="input-group-addon"><i
@@ -565,7 +567,7 @@
                                                         <div class="col">
                                                             <div class="input-group"><span class="input-group-addon"><i
                                                                         class="fa fa-file-text"></i></span>
-                                                                <input class="form-control" type="text" name="Subject" placeholder="Subject" required="required" />
+                                                                <input class="form-control p" type="text" name="Subject" placeholder="Subject" required="required" />
                                                             </div>
                                                         </div>
                                                     </div>
@@ -636,10 +638,10 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <div class="h5  text-center"><strong>Oumaima El Obayid</strong></div>
-            <div class="text-center h6 text-muted">
+            <p class="h5  text-center"><strong>Oumaima El Obayid</strong></p>
+            <p class="text-center  text-muted">
                 &copy; Oumcreation. All rights reserved.<br>Design - <a class="credit" href="https://oumcreation.com" target="_blank">Oumcreation</a>
-            </div>
+            </p>
             <a href="#header" class="back-to-top"><img src="./public/images/arrow_up.png"></i>
             </a>
         </div>
